fix(security-jwt): 피드백 반영 - CORS 및 JWT 환경변수화
- CORS 설정을 환경변수로 변경 (cors.allowed-origins)
- 비회원도 장소 제보 가능하도록 POST /api/shops/report permitAll
- JWT 토큰 유효시간을 환경변수로 변경 (JWT_ACCESS_TOKEN_VALIDITY, JWT_REFRESH_TOKEN_VALIDITY)
- 테스트 환경에 CORS 설정 추가

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>